2009-03-17  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* src/mp3file.c:
	  Clean up comments in mp3_get_track_ape_replaygain() and
	  remove some useless whitespace.

	* src/mp3file.c:
	  Fix id3_get_string typo (LOCALDEGUB -> LOCALDEBUG)

2009-03-16  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* src/mp3file.c (mp3_get_track_lame_replaygain):
	  Lame did not store ReplayGain values prior to 3.94b

2009-02-28 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc.h
	  src/display.h
	  src/sort_window.c
	  src/display_sorttabs.c
	  src/misc.c:
	  Optimation in the sort code -- thanks to javier Kohen for
	  the patches.

2009-02-28 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_coverart.c
	  src/display_tracks.c
	  src/display_sorttabs.c:
	  Use g_list_prepend instead of g_list_append. Thanks to
	  Javier Kohen for the patches.

2009-02-25 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_tracks: streamline display functions. Thanks to
          Javier Kohen for the patch.

2009-02-24 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_tracks.c (tm_data_compare)
	  src/misc_track.c (track_get_text):
	  Use faster but less convenient code in switch()
	  statements. Thanks to Javier Kohen for the patch.

2009-02-24 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_sorttabs.c (st_remove_all_entries_from_model):
	  Faster code to remove all entries in the filter
	  entries. Thanks to Javier Kohen for the patch.

2009-02-24 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_tracks.c (tm_remove_all_tracks):
	  Faster code to remove all tracks. Thanks to Javier Kohen
	  for the patch.

2009-02-23 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc_track.c
	  src/display_sorttabs.c: use g_list_prepend() instead of
	  g_list_append() where appropriate. Thanks to Javier Kohen
	  for the patch.

2009-02-23 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc.h